@@ -1,4 +1,4 @@
-FROM openjdk:11-jdk-slim-bullseye
+FROM openjdk:21-jdk-slim-bullseye
 
 ENV DEBIAN_FRONTEND noninteractive
 
@@ -22,4 +22,11 @@ COPY . .
 
 RUN ./gradlew copyDevLibrary installDist
 
-CMD ["./datafusion-examples/build/install/datafusion-examples/bin/datafusion-examples"]
+# Set working directory so that the relative paths to resource files used in ExampleMain are correct
+WORKDIR /usr/opt/datafusion-java/datafusion-examples
+
+# Configure environment variables to allow loading datafusion-java in jshell
+ENV CLASSPATH="/usr/opt/datafusion-java/datafusion-examples/build/install/datafusion-examples/lib/*"
+ENV JDK_JAVA_OPTIONS="-Djava.library.path=/usr/opt/datafusion-java/datafusion-java/build/jni_libs/dev --add-opens=java.base/java.nio=ALL-UNNAMED"
+
+CMD ["./build/install/datafusion-examples/bin/datafusion-examples"]
